[gd_scene load_steps=5 format=3 uid="uid://dgbqpem1byrx7"]

[ext_resource type="Texture2D" uid="uid://qb0g3j0c37bn" path="res://Assets/Sprite/Player Sheet.png" id="1_jigll"]
[ext_resource type="Script" path="res://healthbar/test_player.gd" id="1_re6ml"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cmb8h"]
radius = 25.2982

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhxwq"]
size = Vector2(32, 48)

[node name="testPlayer" type="CharacterBody2D"]
script = ExtResource("1_re6ml")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_jigll")
hframes = 3
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cmb8h")
debug_color = Color(0.512883, 0.463331, 0.892272, 0.42)

[node name="hurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
shape = SubResource("RectangleShape2D_nhxwq")

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
